# elasticsearch-semantic-search-tutorial

./: .env.tmpl  .gitignore  00_create_index.txt  01_download_dataset.py  02_chunk.py  03_embed.py  04_ingest.py  05_keyword_semantic.py  README.md  pyproject.toml
